# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redcross"
version = "2.1.0"
description = "Red-Cross Link Tracker - Educational Red Team Training Tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Wangsa", email = "dostoyevsky79@proton.me"}
]
keywords = ["security", "pentest", "red-team", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
redcross = "redcross.main:main"

[project.urls]
Homepage = "https://github.com/Wangsa779/RED-CROSS-project"
Repository = "https://github.com/Wangsa779/RED-CROSS-project"
