[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redtrack"
version = "2.1.0"
description = "Professional link tracking framework for authorized security testing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "pyngrok>=5.0.0",
    "user-agents>=2.2.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/redtrack"
Repository = "https://github.com/yourusername/redtrack"

[tool.setuptools]
packages = ["redtrack"]

[tool.setuptools.package-dir]
redtrack = "."
